Update der Kubernetes Manifeste und Redis Cache ergänzt

--- a/manifests/identityserver-deployment.yml
+++ b/manifests/identityserver-deployment.yml
@@ -15,58 +15,10 @@ spec:
     spec:
       containers:
       - name: identityserver
-        image: studentenk8sregistry.azurecr.io/jb-thesis-identityserver:v1.0
+        image: studentenk8sregistry.azurecr.io/jb-thesis-identityserver:v2.0
         env:
-        - name: ASPNETCORE_URLS
-          valueFrom:
-            configMapKeyRef:
-              name: jb-thesis-project-configmap
-              key: ASPNETCORE_URLS
-        - name: ASPNETCORE_ENVIRONMENT
-          valueFrom:
-            configMapKeyRef:
-              name: jb-thesis-project-configmap
-              key: ASPNETCORE_ENVIRONMENT
-        - name: WebApp__Callback-Url
-          valueFrom:
-            configMapKeyRef:
-              name: jb-thesis-project-configmap
-              key: WebApp__Callback-Url
-        - name: WebApp__Silent-Refresh-Url
-          valueFrom:
-            configMapKeyRef:
-              name: jb-thesis-project-configmap
-              key: WebApp__Silent-Refresh-Url
-        - name: WebApp__Front-Channel-Logout-Url
-          valueFrom:
-            configMapKeyRef:
-              name: jb-thesis-project-configmap
-              key: WebApp__Front-Channel-Logout-Url
-        - name: WebApp__Post-Logout-Redirect-Url
-          valueFrom:
-            configMapKeyRef:
-              name: jb-thesis-project-configmap
-              key: WebApp__Post-Logout-Redirect-Url
-        - name: WebApp__Additional-Logout-Redirect-Url
-          valueFrom:
-            configMapKeyRef:
-              name: jb-thesis-project-configmap
-              key: WebApp__Additional-Logout-Redirect-Url
-        - name: BasepathConfig__ProxyHeader
-          valueFrom:
-            configMapKeyRef:
-              name: jb-thesis-project-configmap
-              key: BasepathConfig__ProxyHeader
-        - name: BasepathConfig__InternalBasePath
-          valueFrom:
-            configMapKeyRef:
-              name: jb-thesis-project-configmap
-              key: BasepathConfig__InternalBasePath
-        - name: BasepathConfig__ProxyBasePath
-          valueFrom:
-            configMapKeyRef:
-              name: jb-thesis-project-configmap
-              key: BasepathConfig__ProxyBasePath
+        - name: Serilog__Properties__Application
+          value: JB.Thesis.IdentityServer
         resources:
           limits:
             cpu: 500m
@@ -76,6 +28,9 @@ spec:
             memory: 64Mi
         ports:
         - containerPort: 80
+        envFrom:
+        - configMapRef:
+            name: jb-thesis-project-configmap
 ---
 apiVersion: v1
 kind: Service
