--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
     "WriteTo": [
       {
         "Name": "Console",
@@ -19,7 +20,17 @@
           "indexFormat": "logstash-{0:yyyy.MM.dd}"
         }
       }
-    ]
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "System": "Warning",
+        "Microsoft": "Warning"
+      }
+    },
+    "Properties": {
+      "Application": "JB.Thesis.IdentityServer"
+    }
   },
   "BasepathConfig": {
     "ProxyHeader": "X-Forwarded-For",
