--- a/ML.Proxy/ML.Proxy.csproj
+++ b/ML.Proxy/ML.Proxy.csproj
@@ -14,7 +14,8 @@
     <PackageReference Include="packetnet-connections" Version="1.2.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
-    <PackageReference Include="Serilog.Formatting.Elasticsearch" Version="8.4.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
+    <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.4.1" />
     <PackageReference Include="SharpPcap" Version="6.0.0" />
     <PackageReference Include="Yarp.ReverseProxy" Version="1.0.0-preview.11.*" />
   </ItemGroup>
