--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,17 @@ services:
             - BasepathConfig__ProxyHeader=X-Forwarded-For
             - BasepathConfig__InternalBasePath=/
             - BasepathConfig__ProxyBasePath=/identity
+            - Serilog__MinimumLevel__Default=Information
+            - Serilog__MinimumLevel__Override__Microsoft=Warning
+            - Serilog__MinimumLevel__Override__System=Warning
+            - Serilog__Properties__Application=JB.Thesis.IdentityServer
+            - Serilog__Using__0=Serilog.Sinks.Console
+            - Serilog__WriteTo__0__Args__outputTemplate="[{Timestamp:HH:mm:ss.ms} {Level:u3}] {ThreadId} {MachineName} {EnvironmentUserName} {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+            - Serilog__WriteTo__0__Name=Console
+            - Serilog__WriteTo__1__Args__indexFormat=logstash-{0:yyyy.MM.dd}
+            - Serilog__WriteTo__1__Args__nodeUris=http://elasticsearch:9200
+            - Serilog__WriteTo__1__Name=Elasticsearch
+            - Serilog__WriteTo__1__Options__0__AutoRegisterTemplate="true"
         networks:
             - devnetwork
         deploy:
@@ -40,6 +51,17 @@ services:
             - IdentityServer__ValidIssuers__1=http://identityserver
             - IdentityServer__ValidIssuers__2=https://localhost/identity
             - IdentityServer__RequireHttpsMetadata=false
+            - Serilog__MinimumLevel__Default=Information
+            - Serilog__MinimumLevel__Override__Microsoft=Warning
+            - Serilog__MinimumLevel__Override__System=Warning
+            - Serilog__Properties__Application=JB.Thesis.WeatherAPI
+            - Serilog__Using__0=Serilog.Sinks.Console
+            - Serilog__WriteTo__0__Args__outputTemplate="[{Timestamp:HH:mm:ss.ms} {Level:u3}] {ThreadId} {MachineName} {EnvironmentUserName} {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+            - Serilog__WriteTo__0__Name=Console
+            - Serilog__WriteTo__1__Args__indexFormat=logstash-{0:yyyy.MM.dd}
+            - Serilog__WriteTo__1__Args__nodeUris=http://elasticsearch:9200
+            - Serilog__WriteTo__1__Name=Elasticsearch
+            - Serilog__WriteTo__1__Options__0__AutoRegisterTemplate="true"
         networks:
             - devnetwork
         deploy:
@@ -61,6 +83,17 @@ services:
             - IdentityServer__ValidIssuers__1=http://identityserver
             - IdentityServer__ValidIssuers__2=https://localhost/identity
             - IdentityServer__RequireHttpsMetadata=false
+            - Serilog__MinimumLevel__Default=Information
+            - Serilog__MinimumLevel__Override__Microsoft=Warning
+            - Serilog__MinimumLevel__Override__System=Warning
+            - Serilog__Properties__Application=JB.Thesis.LocationAPI
+            - Serilog__Using__0=Serilog.Sinks.Console
+            - Serilog__WriteTo__0__Args__outputTemplate="[{Timestamp:HH:mm:ss.ms} {Level:u3}] {ThreadId} {MachineName} {EnvironmentUserName} {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+            - Serilog__WriteTo__0__Name=Console
+            - Serilog__WriteTo__1__Args__indexFormat=logstash-{0:yyyy.MM.dd}
+            - Serilog__WriteTo__1__Args__nodeUris=http://elasticsearch:9200
+            - Serilog__WriteTo__1__Name=Elasticsearch
+            - Serilog__WriteTo__1__Options__0__AutoRegisterTemplate="true"
         networks:
             - devnetwork
         deploy:
@@ -90,7 +123,19 @@ services:
             - ML.Proxy.ML-Modell__ONNX__GoldenEye__Model-Path=https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/ONNX/GoldenEyeTrafficData-classification.onnx
             - ML.Proxy.ML-Modell__ONNX__LOIC__Model-Path=https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/ONNX/LOICTrafficData-classification.onnx
             - ML.Proxy.ML-Modell__ONNX__Slowloris__Model-Path=https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/ONNX/SlowlorisTrafficData-classification.onnx
-            # - ASPNETCORE_ENVIRONMENT=Docker
+            - Redis__Connection-String=redis-requestcache:6379
+            - ASPNETCORE_ENVIRONMENT=Docker
+            - Serilog__MinimumLevel__Default=Information
+            - Serilog__MinimumLevel__Override__Microsoft=Warning
+            - Serilog__MinimumLevel__Override__System=Warning
+            - Serilog__Properties__Application=JB.Thesis.ML.Proxy
+            - Serilog__Using__0=Serilog.Sinks.Console
+            - Serilog__WriteTo__0__Args__outputTemplate="[{Timestamp:HH:mm:ss.ms} {Level:u3}] {ThreadId} {MachineName} {EnvironmentUserName} {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+            - Serilog__WriteTo__0__Name=Console
+            - Serilog__WriteTo__1__Args__indexFormat=logstash-{0:yyyy.MM.dd}
+            - Serilog__WriteTo__1__Args__nodeUris=http://elasticsearch:9200
+            - Serilog__WriteTo__1__Name=Elasticsearch
+            - Serilog__WriteTo__1__Options__0__AutoRegisterTemplate="true"
         volumes: 
             - ${USERPROFILE}\.aspnet\https\ML.Proxy.pfx+5.p12:/https/ML.Proxy.pfx:ro
         networks:
