--- a/manifests/grafana-deployment.yml
+++ b/manifests/grafana-deployment.yml
@@ -41,7 +41,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grafana
-  namespace: backend-for-frontend
+  namespace: jb-thesis-project
   annotations:
       prometheus.io/scrape: 'true'
       prometheus.io/port:   '3000'
