--- a/manifests/project-configmap.yml
+++ b/manifests/project-configmap.yml
@@ -34,6 +34,7 @@ data:
   Serilog__WriteTo__1__Args__nodeUris: http://elasticsearch:9200
   Serilog__WriteTo__1__Name: Elasticsearch
   Serilog__WriteTo__1__Options__0__AutoRegisterTemplate: "true"
-  Redis__Connection-String: redis-requestcache:6379
+  # Redis__Connection-String: redis-requestcache:6379
+  Redis__Connection-String: redis-requestcache
 
 
