--- a/ML.Proxy/ML.Proxy.csproj
+++ b/ML.Proxy/ML.Proxy.csproj
@@ -10,8 +10,9 @@
     <PackageReference Include="Microsoft.Extensions.ML" Version="1.6.0" />
     <PackageReference Include="Microsoft.ML.FastTree" Version="1.6.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
-    <PackageReference Include="PacketDotNet" Version="1.2.0" />
-    <PackageReference Include="packetnet-connections" Version="1.2.0" />
+    <PackageReference Include="PacketDotNet" Version="1.3.0" />
+    <PackageReference Include="prometheus-net" Version="4.2.0" />
+    <PackageReference Include="prometheus-net.AspNetCore" Version="4.2.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
