--- a/manifests/prometheus-config.yml
+++ b/manifests/prometheus-config.yml
@@ -73,3 +73,25 @@ data:
 
         static_configs:
           - targets: ['identityserver:80']
+      
+      # The job name is added as a label `job=<job_name` to any timeseries
+      - job_name: 'ml.proxy-metrics'
+
+        # Override the global default and scrape targets from this job
+        scrape_interval: 5s
+
+        # List of all metric relabel configurations
+        metric_relabel_configs:
+          - action: replace
+            regex: (.*)
+            replacement: $1
+            source_labels:
+              - __meta_kubernetes_pod_node_name
+            target_label: kubernetes_node
+          - action: replace
+            source_labels:
+              - node
+            target_label: instance
+
+        static_configs:
+          - targets: ['ml-proxy:80']
