Safelisting für sichere IP-Adressen eingeführt

--- a/ML.Proxy/appsettings.Development.json
+++ b/ML.Proxy/appsettings.Development.json
@@ -122,5 +122,10 @@
   },
   "Redis": {
     "Connection-String": "redis-cache:6379"
-  }
+  },
+  "Secure-IP-Addresses": [
+    { "Kanzlei-Buecher": "0.0.0.0" },
+    { "Kanzlei-Naujoks": "1.1.1.1" },
+    { "Kanzlei-Mueller": "2.2.2.2" }
+  ]
 }
