Optimierte Variante der vorhandenen Modelle hinzugefügt

--- a/ML.Proxy.ModelTrainer/ML.Proxy.ModelTrainer.csproj
+++ b/ML.Proxy.ModelTrainer/ML.Proxy.ModelTrainer.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\ML.Proxy.DataModels\ML.Proxy.DataModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MLModelle\Optimized\" />
+  </ItemGroup>
+
 </Project>
