--- a/ML.Proxy/appsettings.Development.json
+++ b/ML.Proxy/appsettings.Development.json
@@ -118,6 +118,17 @@
       "Slowloris": {
         "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/ONNX/SlowlorisTrafficData-classification.onnx"
       }
+    },
+    "Optimized": {
+      "GoldenEye": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/Optimized/GoldenEyeTrafficData-classification.onnx"
+      },
+      "LOIC": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/Optimized/LOICTrafficData-classification.onnx"
+      },
+      "Slowloris": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/Optimized/SlowlorisTrafficData-classification.onnx"
+      }
     }
   },
   "Redis": {
