Safelist und Blacklist Operationen mit vorgelagerter Authentifizierung und Autorisierung ergänzt

--- a/LocationApi/appsettings.Development.json
+++ b/LocationApi/appsettings.Development.json
@@ -34,6 +34,12 @@
   },
   "IdentityServer": {
     "Authority": "https://localhost/identity",
+    "Audience": "locationapi",
+    "ValidIssuers": [
+      "https://reverse.proxy.localhost/identity",
+      "http://identityserver",
+      "https://localhost/identity"
+    ],
     "RequireHttpsMetadata": true
   }
 }
