--- a/ML.Proxy/appsettings.Development.json
+++ b/ML.Proxy/appsettings.Development.json
@@ -121,22 +121,32 @@
     },
     "Optimized": {
       "GoldenEye": {
-        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/Optimized/GoldenEyeTrafficData-classification.onnx"
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/Optimized/GoldenEyeTrafficData-classification.zip"
       },
       "LOIC": {
-        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/Optimized/LOICTrafficData-classification.onnx"
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/Optimized/LOICTrafficData-classification.zip"
       },
       "Slowloris": {
-        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/Optimized/SlowlorisTrafficData-classification.onnx"
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/Optimized/SlowlorisTrafficData-classification.zip"
       }
     }
   },
   "Redis": {
-    "Connection-String": "redis-cache:6379"
+    "Connection-String": "localhost"
   },
   "Secure-IP-Addresses": [
     { "Kanzlei-Buecher": "0.0.0.0" },
     { "Kanzlei-Naujoks": "1.1.1.1" },
     { "Kanzlei-Mueller": "2.2.2.2" }
-  ]
+  ],
+  "IdentityServer": {
+    "Authority": "https://localhost/identity",
+    "Audience": "ml.proxy",
+    "ValidIssuers": [
+      "https://reverse.proxy.localhost/identity",
+      "http://identityserver",
+      "https://localhost/identity"
+    ],
+    "RequireHttpsMetadata": true
+  }
 }
