Umstellung der Architektur hinsichtlich der Bereitstellung des Frontend durch den Proxy

--- a/ML.Proxy/appsettings.Docker.json
+++ b/ML.Proxy/appsettings.Docker.json
@@ -1,12 +1,12 @@
 {
   "ML.Proxy": {
     "Routes": {
-      "angularSpa": {
-        "ClusterId": "spaCluster",
-        "Match": {
-          "Path": "/{**catch-all}"
-        }
-      },
+      //"angularSpa": {
+      //  "ClusterId": "spaCluster",
+      //  "Match": {
+      //    "Path": "/{**catch-all}"
+      //  }
+      //},
       "weatherApi": {
         "ClusterId": "weatherCluster",
         "Match": {
@@ -36,13 +36,13 @@
       }
     },
     "Clusters": {
-      "spaCluster": {
-        "Destinations": {
-          "spa": {
-            "Address": "http://angular-webapp"
-          }
-        }
-      },
+      //"spaCluster": {
+      //  "Destinations": {
+      //    "spa": {
+      //      "Address": "http://angular-webapp"
+      //    }
+      //  }
+      //},
       "weatherCluster": {
         "Destinations": {
           "weatherApi": {
