--- a/ReverseProxy/conf.d/sites-available/jb-thesis-project.conf
+++ b/ReverseProxy/conf.d/sites-available/jb-thesis-project.conf
@@ -28,17 +28,18 @@ server {
     include common.conf;
     include /etc/nginx/ssl.conf;
 
+
     location / {
+        proxy_pass http://angularwebapp;
+        include common_location.conf;
+    }
+
+    location ~* /(.*/.*)$ {
         proxy_pass http://ml.proxy;
         include common_location.conf;
     }
 
     # Disabled for using ML.Proxy for delegating the traffic
-    # location / {
-    #     proxy_pass http://angularwebapp;
-    #     include common_location.conf;
-    # }
-
     # location /weatherdata {
     #     rewrite ^/weatherdata(.*)$ $1 break;
     #     proxy_pass http://weatherapi;
@@ -57,22 +58,15 @@ server {
     #     include common_location.conf;
     # }
 
-    location /kibana {
+    location ^~ /kibana {
         rewrite ^/kibana(.*)$ $1 break;
         proxy_pass http://kibana;
         include common_location.conf;
     }
     
-    location /grafana {
+    location ^~ /grafana {
         rewrite ^/grafana(.*)$ $1 break;
         proxy_pass http://grafana;
         include common_location.conf;
-    }
-
-    location /nginx_status {
-        stub_status;
-        access_log off;
-        # allow 127.0.0.1;
-        # deny all;
     }
 }
