--- a/manifests/ml.proxy-deployment.yml
+++ b/manifests/ml.proxy-deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: ml-proxy
-        image: studentenk8sregistry.azurecr.io/jb-thesis-ml.proxy:v4.0
+        image: studentenk8sregistry.azurecr.io/jb-thesis-ml.proxy:v4.2
         env:
         - name: Serilog__Properties__Application
           value: JB.Thesis.ML.Proxy
@@ -31,8 +31,14 @@ spec:
         envFrom:
         - configMapRef:
             name: jb-thesis-project-configmap
-        - configMapRef:
-            name: ml-proxy
+        volumeMounts:
+          - mountPath: /app/appsettings.json
+            subPath: appsettings.json
+            name: appsettings-volume
+      volumes:
+      - name: appsettings-volume
+        configMap:
+          name: ml-proxy-yarp-config
 ---
 apiVersion: v1
 kind: Service
