--- a/manifests/ml.proxy-deployment.yml
+++ b/manifests/ml.proxy-deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: ml-proxy
-        image: studentenk8sregistry.azurecr.io/jb-thesis-ml.proxy:v4.3
+        image: studentenk8sregistry.azurecr.io/jb-thesis-ml.proxy:v4.4
         env:
         - name: Serilog__Properties__Application
           value: JB.Thesis.ML.Proxy
@@ -32,8 +32,7 @@ spec:
         - configMapRef:
             name: jb-thesis-project-configmap
         volumeMounts:
-          - mountPath: /app/appsettings.json
-            subPath: appsettings.json
+          - mountPath: /app/config
             name: appsettings-volume
       volumes:
       - name: appsettings-volume
