--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -13,3 +13,5 @@ RUN ng build --prod --base-href="/"
 FROM nginx:alpine
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY --from=build /usr/src/app/dist/webapp /usr/share/nginx/html
+WORKDIR /usr/share/nginx/html
+RUN ln -s assets/site-logo.png site-logo.png
