--- a/ML.Proxy/appsettings.Development.json
+++ b/ML.Proxy/appsettings.Development.json
@@ -7,6 +7,14 @@
     }
   },
   "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "System": "Warning",
+        "Microsoft": "Warning",
+        "Microsoftr.AspNetCore.Authentication": "Information"
+      }
+    },
     "WriteTo": [
       {
         "Name": "Console",
