--- a/manifests/project-configmap.yml
+++ b/manifests/project-configmap.yml
@@ -29,6 +29,7 @@ data:
   ML.Proxy.ML-Modell__Optimized__Slowloris__Model-Path: https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/Optimized/SlowlorisTrafficData-classification.zip
   Serilog__MinimumLevel__Default: Information
   Serilog__MinimumLevel__Override__Microsoft: Warning
+  Serilog__MinimumLevel__Override__Microsoftr.AspNetCore.Authentication: Information
   Serilog__MinimumLevel__Override__System: Warning
   Serilog__Using__0: Serilog.Sinks.Console
   Serilog__WriteTo__0__Args__outputTemplate: "[{Timestamp:HH:mm:ss.ms} {Level:u3}] {ThreadId} {MachineName} {EnvironmentUserName} {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
