RedisService für Caching von erfolgreich eingeloggten Usern etabliert

--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -39,9 +39,13 @@
     "ProxyBasePath": "/identity"
   },
   "WebApp": {
-    "Callback-Url": "https://localhost:4200/signin-oidc",
-    "Silent-Refresh-Url": "https://localhost:4200/silent-renew.html",
-    "Front-Channel-Logout-Url": "https://localhost:4200/signout-oidc",
-    "Post-Logout-Redirect-Url": "https://localhost/signout-callback-oidc"
+    "Callback-Url": "https://127.0.0.1:4200/",
+    "Silent-Refresh-Url": "https://127.0.0.1:4200/silent-renew.html",
+    "Front-Channel-Logout-Url": "https://127.0.0.1:4200/",
+    "Post-Logout-Redirect-Url": "https://127.0.0.1:4200/",
+    "Additional-Post-Logout-Redirect-Url": "https://127.0.0.1:4200/unauthorized"
+  },
+  "Redis": {
+    "Connection-String": "localhost"
   }
 }
