--- a/IdentityServer/IdentityServer.csproj
+++ b/IdentityServer/IdentityServer.csproj
@@ -9,6 +9,8 @@
     
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.8" />
     
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="5.0.1" />
+    
     <PackageReference Include="prometheus-net" Version="4.2.0" />
     
     <PackageReference Include="prometheus-net.AspNetCore" Version="4.2.0" />
