--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
             - Serilog__WriteTo__1__Args__nodeUris=http://elasticsearch:9200
             - Serilog__WriteTo__1__Name=Elasticsearch
             - Serilog__WriteTo__1__Options__0__AutoRegisterTemplate="true"
+            - Redis__Connection-String=redis-requestcache
         networks:
             - devnetwork
         deploy:
